# kospi-decision-pipeline

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml  pyrightconfig.json
.github/workflows/: codeql.yml  lint.yml  live-smoke.yml  mypy.yml  test.yml
apps/kr-kospi/config/: agents.yaml  scenario.kospi.next_day.yaml
apps/kr-kospi/src/kospi_decision_pipeline_app_kr_kospi/: cli.py
apps/kr-kospi/tests/: conftest.py
apps/kr-kospi/tests/contract/: test_bronze_ingest.py  test_cli_stub.py  test_connector_fixtures.py  test_connector_http_and_secrets.py  test_ecos_live_connector.py  test_gold_features.py  test_kosis_live_connector.py  test_kpubdata_dataset_list_shape.py  test_kpubdata_krx_dataset_list_shape.py  test_live_bronze_manifest.py  test_live_connector_registry.py  test_pykrx_krx_connector.py  test_silver_normalization.py  (+1 more)
core/src/kospi_decision_pipeline_core/: __init__.py  calendar.py  ids.py  types.py
core/tests/: conftest.py
core/tests/agents/: test_decision.py  test_domestic_macro.py  test_flow.py  test_technical.py  test_valuation.py  test_volatility.py
core/tests/backtest/: test_metrics.py  test_reports.py  test_runner.py  test_walk_forward.py
core/tests/connectors/: test_contracts.py
core/tests/contract/: test_no_future_leakage.py  test_packaging.py
core/tests/runtime/: test_adapters.py  test_run_snapshot.py  test_scenario.py  test_service.py
core/tests/schemas/: test_backtest.py  test_decisions.py  test_serialization.py
core/tests/unit/: test_config.py  test_core_modules.py  test_typing_policy.py
docs/: operator.md  spec.md
docs/adr/: 001-project-foundation.md  014-kpubdata-client-migration.md
scripts/: check_typing_policy.py
tests/fixtures/typing_violations/: any_example.py  type_ignore_example.py
(+84 files in other folders)
